Prevent trigggering of horizontal scroll bar when a vertical scroll bar is triggered (#1510)
* Select all checkbox selects/deselects only the viewable rows.

* Fix large trees: Takes all of min height if no labels overlap and imposes a min node height otherwise.

* Remove unnecessary variables.
Move adjusting y positions to its own function.

* Prevent trigggering of horizontal scroll bar when a vertical scroll bar is triggered.

--- a/app/assets/src/styles/ui/containers/modal.scss
+++ b/app/assets/src/styles/ui/containers/modal.scss
@@ -5,7 +5,10 @@
   right: auto;
 
   .content {
-    width: 900px;
+    // take 10px for a possible vertical scrol bar
+    // otherwise it will trigger an horizontal scroll bar
+    width: 890px;
+    margin: auto;
   }
 
   .close-icon {
